@@ -54,7 +54,7 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
 
   const ins = agent._instrumentation
 
-  const span = ins.createSpan(name, TYPE, SUBTYPE, opName)
+  const span = ins.createSpan(name, TYPE, SUBTYPE, opName, { exitSpan: true })
   if (!span) {
     return orig.apply(request, origArguments)
   }
@@ -69,12 +69,13 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
     // This can be asynchronously determined -- e.g. if it differs from the
     // configured service endpoint region -- so this won't be set until
     // 'complete'.
-    const region = request.httpRequest && request.httpRequest.region
+    const httpRequest = request.httpRequest
+    const region = httpRequest && httpRequest.region
 
     // Destination context.
     // '.httpRequest.endpoint' might differ from '.service.endpoint' if
     // the bucket is in a different region.
-    const endpoint = request.httpRequest && request.httpRequest.endpoint
+    const endpoint = httpRequest && httpRequest.endpoint
     const destContext = {
       service: {
         name: SUBTYPE,
@@ -94,13 +95,34 @@ function instrumentationS3 (orig, origArguments, request, AWS, agent, { version,
     span.setDestinationContext(destContext)
 
     if (response) {
+      // https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/HttpResponse.html
+      const httpResponse = response.httpResponse
+      let statusCode
+      if (httpResponse) {
+        statusCode = httpResponse.statusCode
+
+        // Set HTTP context. Some context not being set, though it is available:
+        // - method: Not that helpful.
+        // - url: Mostly redundant with context.destination.address.
+        // - response.headers: A lot of added size for uncertain utility. The
+        //   inclusion of Amazon's request ID headers might be worth it.
+        const httpContext = {
+          status_code: statusCode
+        }
+        const encodedBodySize = Buffer.isBuffer(httpResponse.body) && httpResponse.body.byteLength
+        if (encodedBodySize) {
+          // I'm not actually sure if this might be decoded_body_size.
+          httpContext.response = { encoded_body_size: encodedBodySize }
+        }
+        span.setHttpContext(httpContext)
+      }
+
       // Follow the spec for HTTP client span outcome.
       // https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-http.md#outcome
       //
       // For example, a S3 GetObject conditional request (e.g. using the
       // IfNoneMatch param) will respond with response.error=NotModifed and
       // statusCode=304. This is a *successful* outcome.
-      const statusCode = response.httpResponse && response.httpResponse.statusCode
       if (statusCode) {
         span._setOutcomeFromHttpStatusCode(statusCode)
       } else {
